@@ -1,3 +1,7 @@
+2010-04-26  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* Makefile.in (LIBS_MACHINE): Remove all uses, unused.
+
 2010-04-18  Juanma Barranquero  <lekktu@gmail.com>
 
 	Add stubs for Windows, required after CVE-2010-0825 change.
