@@ -1,3 +1,9 @@
+2010-04-26  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* configure.in (LIBS_MACHINE): Remove, unused.
+
+	* configure.in (LIB_MATH): New output variable.  Set it for some systems.
+
 2010-04-24  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in (CRT_DIR): New output variable.
